--- a/.env.testing
+++ b/.env.testing
@@ -1,5 +1,5 @@
 export PORT=3000
 export NODE_ENV=testing
 #if in Docker use postgres as host, if in local use localhost - for both modify /etc/hosts and point postgres to 127.0.0.1
-export DATABASE_URL=mongodb://localhost:27017/url_shorter
+export DATABASE_URL=mongodb://url_shorteruser:somepasswordskuaddb@185.4.178.68:27111/url_shorter
 export ALLOWED_HOSTS=http://localhost:3001
