added content to readme

--- a/.env.testing
+++ b/.env.testing
@@ -1,4 +1,4 @@
 export PORT=3000
 export NODE_ENV=testing
-export DATABASE_URL=mongodb://url_shorteruser:somepasswordskuaddb@185.4.178.68:27111/url_shorter
+export DATABASE_URL=mongodb://localhost:27017/url_shorter
 export ALLOWED_HOSTS=http://localhost:3001
