--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -22,7 +22,7 @@ jobs:
         env:
           PORT: 3000
           NODE_ENV: 'testing'
-          DATABASE_URL: 'mongodb://url_shorteruser:somepasswordskuaddb@185.4.178.68:27111/url_shorter'
+          DATABASE_URL: ${{ secrets.CI_TEST_DB }}
 
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -40,5 +40,5 @@ jobs:
         uses: AkhileshNS/heroku-deploy@v3.6.8
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_email: alayesanmifemi@gmail.com
+          heroku_email: a${{ secrets.HEROKU_EMAIL }}
           heroku_app_name: url-shorter-service
